--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ label {
   padding: 12px 24px;
   border-radius: 20px;
   max-width: 100%;
-  width: 100vw;
+  width: 80vw;
   /* box-shadow: 0px 4px 10px 5px rgba(0, 0, 0, 0.1); */
 }
 
@@ -102,10 +102,11 @@ label {
   color: var(--primary-color);
 }
 .result {
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
   border-radius: 10px;
   border: 1px solid var(--primary-color);
   padding: 12px 24px;
+  margin: 3rem 2rem;
 }
 
 .hasil_bmi,
